--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ padding-top: 30px;
 padding-bottom: 10px;
 color: hsl(0, 0%, 100%)}
 
-a{text-decoration: none;
+h1{text-decoration: none;
     font-size: medium;
 color: hsl(0, 0%, 100%);
 display: flex;
@@ -114,7 +114,7 @@ align-items: center;
 font-weight: 600;
 cursor: pointer;}
 
-a:hover{color: hsl(178, 100%, 50%);}
+h1:hover{color: hsl(178, 100%, 50%);}
 
 h4{display: flex;
 align-items: center;}
