--- a/style.css
+++ b/style.css
@@ -118,3 +118,10 @@ h1:hover{color: hsl(178, 100%, 50%);}
 
 h4{display: flex;
 align-items: center;}
+
+a{text-decoration: none;
+color: hsl(0, 0%, 100%);
+font-weight: 600;
+align-self: center;}
+
+a:hover{color: hsl(178, 100%, 50%);}
